--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,5 @@
   "browser_action": {
     "default_popup": "index.html"
   },
-  "permissions": ["storage", "tabs", "activeTab"]
+  "permissions": ["storage", "activeTab"]
 }
